--- a/src/components/Latex/styles.module.css
+++ b/src/components/Latex/styles.module.css
@@ -36,6 +36,7 @@
 
 .latexWrapperColumnDisplay {
   display: flex;
+  /* flex-direction: row; */
   justify-content: center;
   background: transparent;
 }
@@ -43,7 +44,8 @@
 
 .source {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: left;
   overflow: visible;
   word-wrap: break-word;
   white-space: pre-wrap;
