--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -13,8 +13,8 @@ body {
   padding: 0;
 }
 
- .header {
-  padding: 4rem 0;
+ body .header {
+  padding: 8rem 0 !important;
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -33,11 +33,30 @@ body {
   color: transparent;
 
 
-  background: radial-gradient(circle, var(--secondary-color) 0%, var(--primary-color) 100%);
+  background: radial-gradient(circle, var(--secondary-color) 0%,  red 25%, orange 50%, green 75%, var(--primary-color) 100%);
   background-clip: text;
-  animation: glow 14s linear infinite;
-  background-size: 500% 200%;
+  animation: glow 32s linear infinite;
+  background-size: 500% 500%;
 }
+
+@keyframes glow {
+  0% {
+    background-position: 0 0;
+  }
+  25% {
+    background-position: 50% 20%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  75% {
+    background-position: 100% 75%;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
 
 .h1 img {
   width: clamp(1rem, 14vw, 10rem);
@@ -45,43 +64,30 @@ body {
   margin-right: 1rem;
 }
 
-@keyframes glow {
-  0% {
-    background-position: 0 0;
-  }
-  50% {
-    background-position: 100% 100%;
-  }
-  100% {
-    background-position: 0 0;
-  }
-}
 
 .subtitle {
-  font-weight: 900;
+  font-weight: 400;
   line-height: 1;
   max-width: 80%;
-  font-size: clamp(1rem, 5vw, 3rem);
+  font-size: clamp(1rem, 8vw, 10rem);
   text-wrap: balance;
   margin-inline: auto !important;
   margin-bottom: 3rem !important;
   color: var(--blue-800);
+  letter-spacing: -0.08em;
   text-transform: uppercase;
 }
 
 .pods {
   display: flex;
-  gap: 1rem;
-  margin: 0 2rem 1rem 2rem;
+  gap: 6rem;
+  margin: 0 2rem 6rem 2rem;
 
   align-items: stretch;
   flex-direction: row;
   flex-wrap: wrap;
   text-align: center;
 }
-
-
-
 
 .pods a {
   text-decoration: none;
@@ -92,11 +98,14 @@ body {
   text-decoration: none;
 }
 
+
+
+
 .pod {
   position: relative;
   padding: 8px;
-  min-width: 250px;
-  min-height: 200px;
+  min-width: 400px;
+  min-height: 400px;
   color: var(--text-color);
   transform: scale(1);
   transition: all 0.3s ease-in-out;
@@ -106,8 +115,7 @@ body {
   z-index: 1;
   border-radius: 16px;
 
-  /* Transparent border to ensure spacing for the glow */
-  border: 3px solid transparent;
+  border: 3px solid #fff;
   background-clip: padding-box;
   padding-bottom: 60px; /* Ensure space for the button */
 }
@@ -161,7 +169,7 @@ body {
 }
 
 .pod h2 {
-  font-size: 2rem;
+  font-size: 4rem;
   font-weight: 700;
   line-height: 1;
   letter-spacing: -0.04em;
@@ -171,8 +179,8 @@ body {
 .pod p {
   color: var(--neutral-500);
   font-weight: 600;
-  line-height: 1.1;
-  font-size: 1.2rem;
+  line-height: 1;
+  font-size: 2.4rem;
   padding-inline: .5rem;
 }
 
@@ -236,4 +244,49 @@ body {
 [data-theme="dark"] .pods a:hover .pod {
   box-shadow: 
     0 -2px 20px rgb(0 0 0  / .3);
+}
+
+.posterContainer {
+  position: relative;
+  width: 100%;
+  max-width: 800px;
+  margin: 4em auto;
+  aspect-ratio: 2 / 3;
+  overflow: hidden;
+
+  border-radius: 16px;
+  box-sizing: border-box;
+  border: 2px solid var(--neutral-800);
+}
+
+.poster {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 1s ease-in-out;
+}
+
+.posterA {
+  opacity: 1;
+  transition: opacity 1s ease-in-out;
+}
+
+.posterB {
+  opacity: 0.2;
+  transition: opacity 1s ease-in-out;
+}
+
+.fadeIn {
+  opacity: 1;
+  z-index: 2;
+  pointer-events: auto;
+}
+
+.fadeOut {
+  z-index: 1;
 }
